# player-prefs

./: .rustfmt.toml  README.md  justfile
crates/player-prefs-rs/: Cargo.toml
crates/player-prefs-rs/src/: lib.rs
